Fix green hosts not showing if preceding first non-green one in same environment. Implement in backend, as CSS is not powerful enough to handle such a situation

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -64,14 +64,6 @@ a:hover {
 .host.yellow {
     background-color: #FFF108;
 }
-/* Hide other nodes if all are green */
-.host.green ~ .host.green {
-    display: none;
-}
-/* Not so though if there are other colors involved (no negative sibling selector, so this rule overrides the preceding)*/
-.host:not(.green) ~ .host.green {
-    display: block;
-}
 
 .host-name {
     float: right;
